--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3"
   },
